update version, fix dark mode issue

--- a/src/docker.labelInjector/usr/local/emhttp/plugins/docker.labelInjector/styles/styles.css
+++ b/src/docker.labelInjector/usr/local/emhttp/plugins/docker.labelInjector/styles/styles.css
@@ -26,3 +26,7 @@
 .label-injector-form-group-divider {
     height: 300px;
 }
+
+.choices__item {
+    color: black;
+}
